Closed
Bug 240264
Opened 22 years ago
Closed 22 years ago
SYS3175 on opening M17beta follow installation of optimoz
Categories
(SeaMonkey :: General, defect)
SeaMonkey
General
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: ygk, Assigned: sicking)
References
Details
(Keywords: crash, fixed1.7)
Attachments
(1 file)
|
6.27 KB,
patch
|
jst
:
review+
jst
:
superreview+
tor
:
approval1.7+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.6) Gecko/20040117 MultiZilla/1.6.3.0e
Build Identifier: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.7) Gecko/20040410
Mozilla 1.7b and the 20040410 nightly crash on start up following installation
of optimoz 20031118 (mouse gestures). The crash occurs immediately after chosing
rather to work online or off (It crashes on either choice. It appears to be OS2
specific as the win32 20040411 nightly work fine with optimoz. This happens with
a new profile and no othe modification made. The error message follows:
04-11-2004 14:40:53 SYS3175 PID 006b TID 0001 Slot 00c4
M:\MOZILLA.ORG\MOZILLA\MOZILLA.EXE
c0000005
00003001
P1=00000001 P2=00003001 P3=XXXXXXXX P4=XXXXXXXX
EAX=009dbd61 EBX=009dd738 ECX=00000000 EDX=15da3d28
ESI=00a68a00 EDI=0012a660
DS=0053 DSACC=f0f3 DSLIM=ffffffff
ES=0053 ESACC=f0f3 ESLIM=ffffffff
FS=150b FSACC=00f3 FSLIM=00000030
GS=0000 GSACC=**** GSLIM=********
CS:EIP=005b:00003001 CSACC=f0df CSLIM=ffffffff
SS:ESP=0053:0012a61c SSACC=f0f3 SSLIM=ffffffff
EBP=0012a638 FLG=00012216
Reproducible: Always
Steps to Reproduce:
1.Install Mozilla 1.7b or a recent nightly for OS2
2.Install optimoz from its web site
3. Exit mozilla
4. Try to restart results in SYS3175
Actual Results:
Browser crashes
Expected Results:
Browser should open and mouse gestures should work
Comment 1•22 years ago
|
||
Hmm.
I can't install this for some reason.
I get "Failed to create directory - You probably don't have appropriate
permissions (write access to mozilla/chrome directory).
--------
Error code -202
Comment 2•22 years ago
|
||
I figured out my problem.
optimoz moz gestures installed fine on my 1.7b build and works fine.
I tried the work offline/online menu and the button and both worked.
I also closed and restarted and it worked fine.
The crash you posted is missing some info. Can you post the exact crash from
popuplog.os2?
It's missing the last few lines.
Thanks
| Reporter | ||
Comment 3•22 years ago
|
||
(In reply to comment #2)
> I figured out my problem.
>
> optimoz moz gestures installed fine on my 1.7b build and works fine.
>
> I tried the work offline/online menu and the button and both worked.
>
> I also closed and restarted and it worked fine.
>
> The crash you posted is missing some info. Can you post the exact crash from
> popuplog.os2?
>
> It's missing the last few lines.
>
> Thanks
M:\MOZILLA.ORG\MOZILLA\MOZILLA.EXE
c0000005
00003001
P1=00000001 P2=00003001 P3=XXXXXXXX P4=XXXXXXXX
EAX=00d4d661 EBX=00d4ea20 ECX=00000000 EDX=15dc3d28
ESI=00d8c3c0 EDI=0012a650
DS=0053 DSACC=f0f3 DSLIM=ffffffff
ES=0053 ESACC=f0f3 ESLIM=ffffffff
FS=150b FSACC=00f3 FSLIM=00000030
GS=0000 GSACC=**** GSLIM=********
CS:EIP=005b:00003001 CSACC=f0df CSLIM=ffffffff
SS:ESP=0053:0012a60c SSACC=f0f3 SSLIM=ffffffff
EBP=0012a628 FLG=00012216
Mike the last lines don't appear in the popuplog. I tried it 6 times and it was
always the same. Wolfi on the Mozilla OS2 new gruop posted the following sys3175
following installation of optimoz. It also lacks the last lines.
03-21-2004 13:28:18 SYS3175 PID 0117 TID 0001 Slot 00ac
L:\MOZILLA-TRUNK\MOZILLA\MOZILLA.EXE
c0000005
00003001
P1=00000001 P2=00003001 P3=XXXXXXXX P4=XXXXXXXX
EAX=009a2c41 EBX=009a46e0 ECX=00000000 EDX=128a3d28
ESI=008e89e0 EDI=0012da38
DS=0053 DSACC=f0f3 DSLIM=ffffffff
ES=0053 ESACC=f0f3 ESLIM=ffffffff
FS=150b FSACC=00f3 FSLIM=00000030
GS=0000 GSACC=**** GSLIM=********
CS:EIP=005b:00003001 CSACC=f0df CSLIM=ffffffff
SS:ESP=0053:0012d9f4 SSACC=f0f3 SSLIM=ffffffff
EBP=0012da10 FLG=00012216
Comment 4•22 years ago
|
||
interesting.
I'm not sure what to do with this one honestly. I can't recreate it at all.
I was confused by your offline/online statement though.
Do you install it, close mozilla and restart and trap immediately?
Or do you have to do something?
| Reporter | ||
Comment 5•22 years ago
|
||
(In reply to comment #4)
> interesting.
>
> I'm not sure what to do with this one honestly. I can't recreate it at all.
>
> I was confused by your offline/online statement though.
>
> Do you install it, close mozilla and restart and trap immediately?
>
> Or do you have to do something?
On the restart the mozilla log comes up and then a dialog box asking me if I
want to work online comes up (I changed it from the default) I can select either
one and it crashes.
| Reporter | ||
Comment 6•22 years ago
|
||
The above should say mozilla logo not log
| Reporter | ||
Comment 7•22 years ago
|
||
Mike
I ran a procdump on the crash it produced a 1.9 meg file. I will zip it and
upload or email it if it might be help.
Comment 8•22 years ago
|
||
Thanks for the offer Gregg.
We did recreate this and are actively trying to figure out what the heck is
going on.
Status: UNCONFIRMED → NEW
Ever confirmed: true
*** Bug 240555 has been marked as a duplicate of this bug. ***
Comment 10•22 years ago
|
||
The crash is because we are calling an invalid address inside
nsXULElement::GetAttributes(). This happens executing the line:
"NS_ADDREF(*aAttributes = map);"
Currently this crash only occurs on OS/2 trunk, however Sicking says that this is
really a cross platform bug that OS/2 exposes, so this should be fixed on all
platforms.
Sicking knows what the problem is. He will fix the bug.
| Assignee | ||
Comment 11•22 years ago
|
||
This is an old bug resurfacing. It's because the code is using the three lowest
bits to store extra information. However it's only safe to do this with the two
lowest bits in general. The reason this only crashes on OS2 is because the code
relies on the allocator returning aligned addresses and it so far only seems
like the OS2 allocator doesn't return memory that is "aligned enough".
However the entire thing is silly. We're saving 4 bytes of memory per instance
by squezing data into the lower bits of the pointer. But we only allocates some
40-50 instances of this struct so we should just remove the entire optimization.
I'll whip up a patch tomorrow.
Assignee: general → bugmail
OS: OS/2 → All
Hardware: PC → All
Updated•22 years ago
|
Flags: blocking1.7+
| Assignee | ||
Comment 12•22 years ago
|
||
Still need to test that it actually fixes the startup problem on OS2
| Assignee | ||
Comment 13•22 years ago
|
||
Comment on attachment 146209 [details] [diff] [review]
should fix it
aaron tested the patch on OS2 and it fixes the crash.
Attachment #146209 -
Flags: superreview?(jst)
Attachment #146209 -
Flags: review?(jst)
Comment 14•22 years ago
|
||
Comment on attachment 146209 [details] [diff] [review]
should fix it
r+sr=jst
Attachment #146209 -
Flags: superreview?(jst)
Attachment #146209 -
Flags: superreview+
Attachment #146209 -
Flags: review?(jst)
Attachment #146209 -
Flags: review+
| Assignee | ||
Comment 15•22 years ago
|
||
Comment on attachment 146209 [details] [diff] [review]
should fix it
Requesting approval. The patch is very simple and should be very safe. Though
the crash has only been seen on OS2 with a certain extension installed, the
problem is compleatly crossplatform and could occur anywhere.
Attachment #146209 -
Flags: approval1.7?
Attachment #146209 -
Flags: approval1.7? → approval1.7+
| Assignee | ||
Comment 17•22 years ago
|
||
checked in to the 1.7 branch
Updated•21 years ago
|
Summary: SYS3175 on opening 1.7b follow installation of optimoz → SYS3175 on opening M17beta follow installation of optimoz
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•