Bug 240264: Don't try to store three bits of data in a pointermember, only two are safe.

r/sr=jst